Edit text, orgenized

--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <title>נועם שמר</title>
 </head>
 <body>
-    <h1>האתר של נועם שמר</h1>
+    <h1>אתר באינטרנט</h1>
     <br/>
     <div>
-        <h2>אודות</h2>
         <p>אני נועם שמר ואני אוהב ליצור כל מני דברים</p>
     </div>
-    <br/>
+    <br/><br/><br/>
     <div>
         <h2>מוזיקות</h2>
         <p>הנה סיפור על פומפה קטן</p>
@@ -21,7 +20,7 @@
         <p>הנה קאבר שהקלטתי עם יויב טל והוא גם שר בו</p>
         <div><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3Q6Nxy93XNlc7bTWNwUWQZ?utm_source=generator" width="320px" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
     </div>
-    <br/>
+    <br/><br/><br/>
     <div>
         <h2>אנימציות</h2>
         <p>הר הכרמל עשוי מפודינ</p>
@@ -36,21 +35,18 @@
             <script async src="//www.instagram.com/embed.js"></script>
         </div>
     </div>
-    <br/>
+    <br/><br/><br/>
     <div>
         <h2>תכנותים</h2>
+        <p>לפעמים אתה רוצה להרגיש מצחיק בלחיצת כפתור</p>
         <a href="https://noamsmr.github.io/please-laugh/" target="_blank">אנא צחק</a>
-        <br/>
-        <br/>
+        <br/><br/>
+        <p>לפעמים אתה רוצה לשלוח הודעה בווצאפ בלי להוסיף איש קשר</p>
         <a href="https://noamsmr.github.io/phn2wtsp/" target="_blank">מטלפון הישר לווצאפ</a>
-        <br/>
-        <br/>
+        <br/><br/>
+        <p>לפעמים בא לך לשחק עם עצמך ארבע בשורה</p>
         <a href="https://noamsmr.github.io/Four-In-A-Row/" target="_blank">ארבע בשורה</a>
     </div>
-    <br/>
-    <div>
-        <h2>מיקסים</h2>
-        <p></p>
-    </div>
+    <br/><br/><br/>
 </body>
 </html>
