Added border and unused font

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <script src="script.js"></script>
 </head>
 <body class="body">
+    <div class="page-border"></div>
     <div>
-        <h1 class="clickable" onclick="onClickPrograming('about')">אתר באינטרנט</h1>
+        <h1 class="clickable" onclick="onClickHeader('about')">אתר באינטרנט</h1>
         <br/>
         <div id="about" class="hidden-content">
             <p>אני נועם שמר ואני אוהב ליצור </p>
             <br/><br/><br/>
         </div>
         <div>
-            <h2 class="clickable" onclick="onClickPrograming('music')">מוזיקות</h2>
+            <h2 class="clickable" onclick="onClickHeader('music')">מוזיקות</h2>
             <div id="music" class="hidden-content">
                 <p>הנה סיפור על פומפה קטן</p>
                 <div class="margin-remove"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/09aHWaCrDXeB4PdlNU7evq?utm_source=generator" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
@@ -27,7 +28,7 @@
             </div>
         </div>
         <div>
-            <h2 class="clickable" onclick="onClickPrograming('animation')">אנימציות</h2>
+            <h2 class="clickable" onclick="onClickHeader('animation')">אנימציות</h2>
             <div id="animation" class="hidden-content">
                 <p>הר הכרמל עשוי מפודינ</p>
                 <div class="margin-remove" align="center">
@@ -44,7 +45,7 @@
             </div>
         </div>
         <div>
-            <h2 class="clickable" onclick="onClickPrograming('programing')">תכנותים</h2>
+            <h2 class="clickable" onclick="onClickHeader('programing')">תכנותים</h2>
             <div id="programing" class="hidden-content">
                 <p>לפעמים אתה רוצה להרגיש מצחיק בלחיצת כפתור</p>
                 <a href="https://noamsmr.github.io/please-laugh/" target="_blank">אנא צחק</a>
