Added contact section

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <script src="script.js"></script>
 </head>
 <body class="body">
-    <div class="page-border"></div>
     <div>
         <h1 class="clickable" onclick="onClickHeader('about')">אתר באינטרנט</h1>
         <br/>
         <div id="about" class="hidden-content">
-            <p>אני נועם שמר ואני אוהב ליצור </p>
+            <p>אני נועם שמר<br/>ואני אוהב ליצור </p>
             <br/><br/><br/>
         </div>
         <div>
@@ -59,5 +58,17 @@
             </div>
         </div>
     </div>
+    <div id="footer" class="footer">
+        <h2 class="clickable" onclick="onClickContact()">תקשור</h2>
+        <div id="contact" class="hidden-content">
+            <div class="social-container">
+                <a href="https://www.facebook.com/noamsmr" target="_blank"><img class="social-icon" src="images/facebook-icon.png" alt="facebook icon"/></a>
+                <a href="https://www.instagram.com/noamshemer" target="_blank"><img class="social-icon" src="images/instagram-icon.png" alt="instagram icon"/></a>
+                <a href="https://wa.me/0542575979?text=%D7%94%D7%99%D7%99%20%D7%90%D7%A9%D7%9E%D7%97%20%D7%9C%D7%94%D7%A2%D7%91%D7%99%D7%A8%20%D7%9C%D7%9A%20%D7%9B%D7%9E%D7%95%D7%99%D7%95%D7%AA%20%D7%92%D7%93%D7%95%D7%9C%D7%95%D7%AA%20%D7%91%D7%9E%D7%99%D7%95%D7%97%D7%93%20%D7%A9%D7%9C%20%D7%9B%D7%A1%D7%A3%2C%20%D7%9E%D7%94%20%D7%A4%D7%A8%D7%98%D7%99%20%D7%97%D7%A9%D7%91%D7%95%D7%9F%20%D7%A9%D7%9C%D7%9A%3F" target="_blank"><img class="social-icon" src="images/whatsapp-icon.png" alt="whatsapp icon"/></a>
+            </div>
+            <div class="email-link"><a href="mailto:noam.smr@gmail.com">noam.smr@gmail.com</a></div>
+        </div>
+    </div>
+    <div class="page-border"></div>
 </body>
 </html>
