All borders are divgit add .

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
             <div class="email-link"><a href="mailto:noam.smr@gmail.com">noam.smr@gmail.com</a></div>
         </div>
     </div>
-    <div class="page-border"></div>
-    <div class="buttom-border"></div>
+    <div class="div-border top-border"></div>
+    <div class="div-border buttom-border"></div>
+    <div class="div-border right-border"></div>
+    <div class="div-border left-border"></div>
 </body>
 </html>
