--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
         <h2 class="clickable" onclick="onClickContact()">תקשור</h2>
         <div id="contact" class="hidden-content">
             <div class="social-container">
-                <a href="https://www.facebook.com/noamsmr" target="_blank"><img class="social-icon" src="images/facebook-icon.png" alt="facebook icon"/></a>
+                <a href="https://open.spotify.com/artist/1uyk6fR4mfJBurbD9pFXUB?si=kb7meTbRRvO-o3jwQGkXYg" target="_blank"><img class="spotify-icon" src="images/spotify-icon.png" alt="spotify icon"/></a>
                 <a href="https://www.instagram.com/noamshemer" target="_blank"><img class="social-icon" src="images/instagram-icon.png" alt="instagram icon"/></a>
+                <a href="https://www.facebook.com/noamsmr" target="_blank"><img class="social-icon" src="images/facebook-icon.png" alt="facebook icon"/></a>
                 <a href="https://wa.me/0542575979?text=%D7%94%D7%99%D7%99%20%D7%90%D7%A9%D7%9E%D7%97%20%D7%9C%D7%94%D7%A2%D7%91%D7%99%D7%A8%20%D7%9C%D7%9A%20%D7%9B%D7%9E%D7%95%D7%99%D7%95%D7%AA%20%D7%92%D7%93%D7%95%D7%9C%D7%95%D7%AA%20%D7%91%D7%9E%D7%99%D7%95%D7%97%D7%93%20%D7%A9%D7%9C%20%D7%9B%D7%A1%D7%A3%2C%20%D7%9E%D7%94%20%D7%A4%D7%A8%D7%98%D7%99%20%D7%97%D7%A9%D7%91%D7%95%D7%9F%20%D7%A9%D7%9C%D7%9A%3F" target="_blank"><img class="social-icon" src="images/whatsapp-icon.png" alt="whatsapp icon"/></a>
             </div>
             <div class="email-link"><a href="mailto:noam.smr@gmail.com">noam.smr@gmail.com</a></div>
