--- a/index.html
+++ b/index.html
@@ -18,11 +18,36 @@
         <div>
             <h2 class="clickable" onclick="onClickHeader('music')">מוזיקות</h2>
             <div id="music" class="hidden-content">
-                <p>הנה סיפור על פומפה קטן</p>
-                <div class="margin-remove"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/09aHWaCrDXeB4PdlNU7evq?utm_source=generator" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+                <p>יש לי קצת דברים בספוטיפי ובעתיד יהיו עוד - צ׳אק איט אאוט, בינתיים יש פה כמה דוגמיות שאתם מוזמנים להשמיע לעציצים שלכם אם הם אוהבים את הסגנון</p>
+                <p>ההר הירוק תמיד בגרסה חדשה ומתוקה לקיץ</p>
+                <audio controls controlsList="nodownload">
+                    <source src="music/230914 har hacarmel.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
                 <br/>
-                <p>הנה קאבר שהקלטתי עם יויב טל והוא גם שר בו</p>
-                <div class="margin-remove"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3Q6Nxy93XNlc7bTWNwUWQZ?utm_source=generator" width="320px" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+                <p>שיר על משחק האהוב על אלוקים</p>
+                <audio controls controlsList="nodownload">
+                    <source src="music/kubiya.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <br/>
+                <p>אחיייי אני אפוי אחי</p>
+                <audio controls controlsList="nodownload">
+                    <source src="music/230705 ani afooy ahi.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <br/>
+                <p>עוד יום רגיל שבו נשאבתי למחילה של חייזר</p>
+                <audio controls controlsList="nodownload">
+                    <source src="music/wtf.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <br/>
+                <p>זה קרה גם למחרת</p>
+                <audio controls controlsList="nodownload">
+                    <source src="music/idk.mp3" type="audio/mpeg">
+                  Your browser does not support the audio element.
+                </audio>
                 <br/><br/><br/>
             </div>
         </div>
