--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
             <div id="music" class="hidden-content">
                 <p>יש לי קצת דברים בספוטיפי ובעתיד יהיו עוד - צ׳אק איט אאוט, בינתיים יש פה כמה דוגמיות שאתם מוזמנים להשמיע לעציצים שלכם אם הם אוהבים את הסגנון</p>
                 <p>ההר הירוק תמיד בגרסה חדשה ומתוקה לקיץ</p>
-                <audio controls controlsList="nodownload">
+                <audio class="margin-remove" controls controlsList="nodownload">
                     <source src="music/230914 har hacarmel.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
                 <br/>
                 <p>שיר על משחק האהוב על אלוקים</p>
-                <audio controls controlsList="nodownload">
+                <audio class="margin-remove" controls controlsList="nodownload">
                     <source src="music/kubiya.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
                 <br/>
                 <p>אחיייי אני אפוי אחי</p>
-                <audio controls controlsList="nodownload">
+                <audio class="margin-remove" controls controlsList="nodownload">
                     <source src="music/230705 ani afooy ahi.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
                 <br/>
                 <p>עוד יום רגיל שבו נשאבתי למחילה של חייזר</p>
-                <audio controls controlsList="nodownload">
+                <audio class="margin-remove" controls controlsList="nodownload">
                     <source src="music/wtf.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
                 <br/>
                 <p>זה קרה גם למחרת</p>
-                <audio controls controlsList="nodownload">
+                <audio class="margin-remove" controls controlsList="nodownload">
                     <source src="music/idk.mp3" type="audio/mpeg">
                   Your browser does not support the audio element.
                 </audio>
