body margin change, dotted border footer, music description

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 </head>
-<body class="body">
+<body id="body" class="body">
     <div>
         <h1 class="clickable" onclick="onClickHeader('about')">אתר באינטרנט</h1>
         <br/>
@@ -18,7 +18,7 @@
         <div>
             <h2 class="clickable" onclick="onClickHeader('music')">מוזיקות</h2>
             <div id="music" class="hidden-content">
-                <p>יש לי קצת דברים בספוטיפי ובעתיד יהיו עוד - צ׳אק איט אאוט, בינתיים יש פה כמה דוגמיות שאתם מוזמנים להשמיע לעציצים שלכם אם הם אוהבים את הסגנון</p>
+                <p>יש לי קצת דברים בספוטיפי ובעתיד יהיו עוד אז צ׳אק דם אאוט ובינתיים יש פה כמה דוגמיות שאתם מוזמנים להשמיע לעציצים שלכם או לרהיטים אחרים בבית ואם אתם בכלל באוטובוס אני מפציר בכם ללכת לנהג ולהשמיע לו עכשיו הוא כרגע מחכה שתבואו.</p>
                 <p>ההר הירוק תמיד בגרסה חדשה ומתוקה לקיץ</p>
                 <audio class="margin-remove" controls controlsList="nodownload">
                     <source src="music/230914 har hacarmel.mp3" type="audio/mpeg">
@@ -92,7 +92,7 @@
                 <a href="https://www.facebook.com/noamsmr" target="_blank"><img class="social-icon" src="images/facebook-icon.png" alt="facebook icon"/></a>
                 <a href="https://wa.me/0542575979?text=%D7%94%D7%99%D7%99%20%D7%90%D7%A9%D7%9E%D7%97%20%D7%9C%D7%94%D7%A2%D7%91%D7%99%D7%A8%20%D7%9C%D7%9A%20%D7%9B%D7%9E%D7%95%D7%99%D7%95%D7%AA%20%D7%92%D7%93%D7%95%D7%9C%D7%95%D7%AA%20%D7%91%D7%9E%D7%99%D7%95%D7%97%D7%93%20%D7%A9%D7%9C%20%D7%9B%D7%A1%D7%A3%2C%20%D7%9E%D7%94%20%D7%A4%D7%A8%D7%98%D7%99%20%D7%97%D7%A9%D7%91%D7%95%D7%9F%20%D7%A9%D7%9C%D7%9A%3F" target="_blank"><img class="social-icon" src="images/whatsapp-icon.png" alt="whatsapp icon"/></a>
             </div>
-            <div class="email-link"><a href="mailto:noam.smr@gmail.com">noam.smr@gmail.com</a></div>
+            <div class="email-link margin-remove"><a href="mailto:noam.smr@gmail.com">noam.smr@gmail.com</a></div>
         </div>
     </div>
     <div class="div-border top-border"></div>
