changed songs descriptions

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                     Your browser does not support the audio element.
                 </audio>
                 <br/>
-                <p>שיר על משחק האהוב על אלוקים</p>
+                <p>שיר על משחק אשר אהוב על אלוקים</p>
                 <audio class="margin-remove" controls controlsList="nodownload">
                     <source src="music/kubiya.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
                 <br/>
-                <p>אחיייי אני אפוי אחי</p>
+                <p>יום עצל בסטודיו ואחריו הולכים לים</p>
                 <audio class="margin-remove" controls controlsList="nodownload">
                     <source src="music/230705 ani afooy ahi.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
                 <br/>
-                <p>עוד יום רגיל שבו נשאבתי למחילה של חייזר</p>
+                <p>היום שבו נשאבתי למחילה של חייזר</p>
                 <audio class="margin-remove" controls controlsList="nodownload">
                     <source src="music/wtf.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
